--- a/app/globals.css
+++ b/app/globals.css
@@ -52,11 +52,13 @@
     @apply text-xl md:text-3xl leading-8 md:leading-10   font-bold   max-w-[325px] md:max-w-[460px] lg:max-w-[480px];
   }
 
-  .cardTitle {
-    @apply text-xl md:text-3xl  leading-6 md:leading-7 font-semibold   max-w-[325px] md:max-w-[460px] lg:max-w-[480px];
-  }
-
   h3 {
     @apply text-lg md:text-2xl leading-8 md:leading-10 font-medium mb-4 md:mb-6 lg:mb-8;
+  }
+
+  /* Custom Class */
+
+  .cardIcon {
+    @apply size-8 md:size-10 xl:size-8
   }
 }
