--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@
   }
 
   h2 {
-    @apply text-2xl md:text-3xl leading-9 md:leading-10   font-bold   max-w-[325px] md:max-w-[460px] lg:max-w-[480px];
+    @apply text-2xl md:text-4xl lg:text-5xl leading-9 md:leading-[48px] lg:leading-[56px]    font-bold   max-w-[325px] md:max-w-[460px] lg:max-w-[520px];
   }
 
   h3 {
@@ -57,7 +57,6 @@
   }
 
   /* Custom Class */
-
   .cardIcon {
     @apply size-8 md:size-10 xl:size-8
   }
