--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@
   }
 
   h3 {
-    @apply text-lg md:text-2xl leading-8 md:leading-10 font-medium mb-4 md:mb-6 lg:mb-8;
+    @apply text-lg mb-6 md:text-2xl leading-8 md:leading-10 font-medium;
   }
 
   /* Custom Class */
