--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@
   }
 
   h2 {
-    @apply text-2xl md:text-4xl lg:text-5xl leading-9 md:leading-[48px] lg:leading-[56px]    font-bold   max-w-[325px] md:max-w-[460px] lg:max-w-[520px];
+    @apply text-2xl md:text-4xl lg:text-5xl leading-9 md:leading-[48px] lg:leading-[56px] font-bold;
   }
 
   h3 {
