--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@
   }
 
   h3 {
-    @apply text-lg  md:text-xl leading-7 md:leading-8  text-center ;
+    @apply text-lg  md:text-xl leading-7 md:leading-8 ;
   }
 
   /* Custom Class */
