--- a/app/globals.css
+++ b/app/globals.css
@@ -47,11 +47,11 @@
   }
 
   h1 {
-    @apply text-5xl md:text-7xl lg:text-9xl leading-[3.5rem] md:leading-[4.5rem] lg:leading-[5rem] font-bold;
+    @apply text-xl md:text-4xl lg:text-5xl xl:text-6xl leading-[2.5rem] md:leading-[4rem] lg:leading-[4.5rem] xl:leading-[5rem] font-bold;
   }
 
   h2 {
-    @apply text-2xl md:text-4xl lg:text-5xl leading-9 md:leading-[48px] lg:leading-[56px] font-bold;
+    @apply text-2xl md:text-4xl lg:text-5xl  leading-9 md:leading-[48px] lg:leading-[56px] font-bold;
   }
 
   h3 {
