--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@
   }
 
   h1 {
-    @apply text-xl md:text-4xl lg:text-5xl xl:text-6xl leading-[2.5rem] md:leading-[4rem] lg:leading-[4.5rem] xl:leading-[5rem] font-bold;
+    @apply text-2xl md:text-4xl lg:text-5xl xl:text-6xl leading-[2.5rem] md:leading-[4rem] lg:leading-[4.5rem] xl:leading-[5rem] font-bold;
   }
 
   h2 {
