--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,9 @@
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 240 5% 65%;
 
+    --tertiary: 47.9 95.8% 53.1%;
+    --tertiary-foreground: 26 83.3% 14.1%;
+
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
 
